--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,12 @@
   text-align: center;
 }
 .nomeUtente {
-  font-size: 17px;
+  font-size: 15px;
   color: #afaaaa;
   padding-right: 12px;
+}
+@media only screen and (max-device-width: 480px) {
+  .secondary {
+    max-width: 120px;
+  }
 }
