--- a/src/style.css
+++ b/src/style.css
@@ -85,6 +85,7 @@ html {
   width: 100%;
   color: #575674;
   font-size: 0.875rem;
+  height: 40px;
 }
 .LoginBox .UserLogin .login-control :focus {
   outline: none;
